<resources>
    <string name="app_name">COVID_Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Hospitals</string>
    <string name="second_fragment_label">Staff</string>
    <string name="third_fragment_label">Patient</string>

    <string name="add_a_new_hospital">Add a new Hospital</string>
    <string name="hospital_name">Name:</string>
    <string name="location">Location:</string>
    <string name="address">Address:</string>
    <string name="staff">Staff</string>
    <string name="patient">Patient</string>
    <string name="edit_hospital">Edit Hospital</string>
    <string name="delete_hospital">Delete Hospital</string>
    <string name="add_a_new_staff">Add a new Staff</string>
    <string name="delete_staff">Delete Staff</string>
    <string name="edit_staff">Edit Staff</string>
    <string name="insert_hospital_text">Insert The New Hospital Data</string>
    <string name="hSaved">Hospital saved.</string>
    <string name="hErrorI">Error on saving hospital!!</string>
    <string name="hErrorD">Error to delete Hospital!!</string>
    <string name="hDeleted">Hospital deleted.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hTitle">Delete Hospital?</string>
    <string name="hName">Hospital:</string>
    <string name="hLocation">Location:</string>
    <string name="hAddress">Address:</string>
    <string name="edit_hospital_data">Edit Hospital Data</string>
    <string name="hErrorE">Error to edit Hospital!!</string>
    <string name="hEdit">Hospital edited.</string>
    <string name="staff_photo">Staff Photo</string>
    <string name="identification">Identification:</string>
    <string name="phone">Phone:</string>
    <string name="profession">Profession:</string>
    <string name="insert_the_new_staff_data">Insert The New Staff Data</string>
    <string name="staff_name">Name:</string>
    <string name="sErrorI">Error on saving staff!!</string>
    <string name="sSaved">Staff Saved</string>
    <string name="edit_staff_data">Edit Staff Data</string>
    <string name="cancel_edit">Cancel Edit</string>
    <string name="sErrorE">Error on edit staff!!</string>
    <string name="sEdited">Staff Edited.</string>
    <string name="sErrorD">Error on Staff delete!!</string>
    <string name="sDeleted">Staff Deleted.</string>
    <string name="empty">We have Beds</string>
    <string name="infected">Infected:</string>
    <string name="recovered">Recovered:</string>
    <string name="state">State:</string>
    <string name="add_new_patient">Add new patient</string>
    <string name="delete_patient">Delete patient</string>
    <string name="edit_patient">Edit patient</string>
    <string name="patient_photo">Patient Photo</string>
    <string name="priority">Priority:</string>
    <string name="disease">Disease:</string>
    <string name="select_hospital">Select an Hospital</string>
    <string name="cancel_patient">Cancel Patient</string>
    <string name="insert_the_new_patient_data">Insert The New Patient Data</string>
    <string name="low">LOW</string>
    <string name="medium">MEDIUM</string>
    <string name="high">HIGH</string>
    <string name="urgent">URGENT</string>
    <string name="pErrorI">Error saving Patient!!</string>
    <string name="pSaved">Patient Saved.</string>
    <string name="prioritySelect">Select a Priority!!</string>
    <string name="pErrorD">Error to delete Patient!!</string>
    <string name="pDeleted">Patient Deleted.</string>
    <string name="lost">Lost</string>
    <string name="edit_patient_data">Edit Patient Data</string>
    <string name="pErrorE">Error Editing Patient!!</string>
    <string name="pEdit">Patient Edit.</string>
</resources>