<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HospitalFragment">

    <fragment
        android:id="@+id/HospitalFragment"
        android:name="vitor.treino.covid_project.HospitalFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_hospital">

        <action
            android:id="@+id/action_HospitalFragment_to_NovoHospitalFragment"
            app:destination="@id/NovoHospitalFragment" />
        <action
            android:id="@+id/action_HospitalFragment_to_StaffFragment"
            app:destination="@id/StaffFragment" />
    </fragment>
    <fragment
        android:id="@+id/NovoHospitalFragment"
        android:name="vitor.treino.covid_project.HospitalNewFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_hospital_new">

        <action
            android:id="@+id/action_NovoHospitalFragment_to_HospitalFragment"
            app:destination="@id/HospitalFragment" />
    </fragment>
    <fragment
        android:id="@+id/StaffFragment"
        android:name="vitor.treino.covid_project.StaffFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_staff" >
        <action
            android:id="@+id/action_StaffFragment_to_HospitalFragment"
            app:destination="@id/HospitalFragment" />
    </fragment>
</navigation>